--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-    background: #FFD700;
+    background: #E2F1E7;
     color: #000;
     height: 70px; /* Atur tinggi tetap */
     padding: 10px;
