--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,10 +26,11 @@
 /* Styling for the full-width card */
 .full-width-card {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 5px;
     box-sizing: border-box;
 }
 
 .container-fluid {
-    padding: 0 10px;
+    /* padding: 0 5px; */
+    margin: 0 0 -5px -5px;
 }
